--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.use-forward-headers=true
 server.servlet.context-path=/diceware
+
+
+spring.thymeleaf.enabled=true
+# Enable for production use (usually).
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
