--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+oauth.clientId=954815010806-enitbbk23p990j1hut733sns7cdn2v14.apps.googleusercontent.com
